[project]
name = "nerdbot"
version = "0.1.0"
description = "Have epic gaming conversations with this AI chatbot! Research games and get recommendations through a fun discussion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "openai>=1.68.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]